--- a/scrap-yard.html
+++ b/scrap-yard.html
@@ -63,9 +63,20 @@
       </a>
     </div>
 
-    <div class="modal" role="dialog">
-      <!--Do I need tabindex="0" for modal accessibility?-->
-      <button class="close">&times;</button>
+    <div
+      class="modal"
+      role="dialog"
+      aria-live="assertive"
+      aria-modal="true"
+      aria-label="Lightbox of project images"
+      aria-describedby="modal-description"
+    >
+      <p id="modal-description" class="screenreader-text">
+        Use arrow keys or the arrow buttons to proceed to the next or last image
+        in the lightbox. To exit the lightbox, press escape or click the close
+        button.
+      </p>
+      <button class="close" aria-label="Close">&times;</button>
       <div class="slide">
         <img src="images/scrapyard-hero.jpg" />
       </div>
@@ -81,8 +92,12 @@
       <div class="slide">
         <img src="images/scrapyard-4.jpg" />
       </div>
-      <button class="left-arrow"><span>❮</span></button>
-      <button class="right-arrow"><span>❯</span></button>
+      <button class="left-arrow" aria-label="Previous image">
+        <span>❮</span>
+      </button>
+      <button class="right-arrow" aria-label="Next image">
+        <span>❯</span>
+      </button>
     </div>
   </body>
 
