--- a/project-template.html
+++ b/project-template.html
@@ -47,11 +47,6 @@
       </p>
       <h2>Web Pages</h2>
       <div class="gallery-container large-block-space">
-        <!-- <button
-          type="button"
-          onkeydown="event.keyCode != 13 || openModal(event)"
-          onkeydown="openModal(event)"
-        > -->
         <button class="zoomable">
           <img
             src="images/wander1.png"
@@ -157,59 +152,74 @@
       </a>
     </div>
 
-    <div class="modal" role="dialog">
-      <!--Do I need tabindex="0" for modal accessibility?-->
-      <button class="close">&times;</button>
+    <div
+      class="modal"
+      role="dialog"
+      aria-live="assertive"
+      aria-modal="true"
+      aria-label="Lightbox of project images"
+      aria-describedby="modal-description"
+    >
+      <p id="modal-description" class="screenreader-text">
+        Use arrow keys or the arrow buttons to proceed to the next or last image
+        in the lightbox. To exit the lightbox, press escape or click the close
+        button.
+      </p>
+      <button class="close" aria-label="Close">&times;</button>
       <div class="slide">
-        <img src="images/wander.png" />
+        <img src="images/wander.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander1.png" />
+        <img src="images/wander1.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander2.png" />
+        <img src="images/wander2.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander3.png" />
+        <img src="images/wander3.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander4.png" />
+        <img src="images/wander4.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander5.png" />
+        <img src="images/wander5.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander6.png" />
+        <img src="images/wander6.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander7.png" />
+        <img src="images/wander7.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander8.png" />
+        <img src="images/wander8.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander9.png" />
+        <img src="images/wander9.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander10.png" />
+        <img src="images/wander10.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander11.png" />
+        <img src="images/wander11.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander12.png" />
+        <img src="images/wander12.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander13.png" />
+        <img src="images/wander13.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander14.png" />
+        <img src="images/wander14.png" alt="_______" />
       </div>
       <div class="slide">
-        <img src="images/wander15.png" />
+        <img src="images/wander15.png" alt="_______" />
       </div>
-      <button class="left-arrow"><span>❮</span></button>
-      <button class="right-arrow"><span>❯</span></button>
+      <button class="left-arrow" aria-label="Previous image">
+        <span>❮</span>
+      </button>
+      <button class="right-arrow" aria-label="Next image">
+        <span>❯</span>
+      </button>
     </div>
   </body>
 
