Add new images and projects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         </p>
       </div>
       <p class="small-block-space">
-        <!-- If you're here to check out my work, click below: -->
         To check out my work, click below:
       </p>
       <nav class="filters-list large-block-space">
@@ -64,10 +63,25 @@
       </nav>
 
       <div class="projects-container large-block-space">
+        <div class="filter-option" data-filter="code">
+          <a href="#">
+            <img
+              src="./images/landing-drawthis.png"
+              alt="________"
+              width="250px"
+            />
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Draw This!
+                <span class="project-subtitle">(Front-end App)</span></span
+              ></span
+            >
+          </a>
+        </div>
         <div class="filter-option" data-filter="game">
           <a href="scrap-yard.html">
             <img
-              src="./images/landing-scrapyard.jpg"
+              src="./images/landing-scrapyard.png"
               alt="Text stating 'Scrap Yard: Innovators of Recycling' above graphics for a fake five-dollar bill and single game die"
               width="250px"
             />
@@ -89,24 +103,9 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code art">
-          <a href="hello.html">
-            <img
-              src="./images/landing-helloworld.jpg"
-              alt="Abstract speckled graphics"
-              width="250px"
-            />
-            <span class="underline">
-              <span class="underline-mask med-animation">
-                Hello
-                <span class="project-subtitle">(Net Art)</span></span
-              ></span
-            >
-          </a>
-        </div>
-        <div class="filter-option" data-filter="code art">
           <a href="wander.html">
             <img
-              src="./images/landing-wander.jpg"
+              src="./images/landing-wander.png"
               alt="ASCII art of flowers growing"
               width="250px"
             />
@@ -118,10 +117,41 @@
             >
           </a>
         </div>
+        <div class="filter-option" data-filter="code">
+          <a href="#">
+            <img
+              src="./images/landing-ambrosia-alt.png"
+              alt="________"
+              width="250px"
+            />
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Ambrosia
+                <span class="project-subtitle">(Website)</span></span
+              ></span
+            >
+          </a>
+        </div>
+        <div class="filter-option" data-filter="code art">
+          <a href="hello.html">
+            <img
+              src="./images/landing-helloworld.png"
+              alt="Abstract speckled graphics"
+              width="250px"
+            />
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Hello
+                <span class="project-subtitle">(Net Art)</span></span
+              ></span
+            >
+          </a>
+        </div>
+
         <div class="filter-option" data-filter="code game">
           <a href="#">
             <img
-              src="./images/landing-unmasked.jpg"
+              src="./images/landing-unmasked.png"
               alt="White animal masks in a horizontal row, including an otter, horse, wolf, reptile, rabbit, and owl"
               width="250px"
             />
@@ -133,10 +163,25 @@
             >
           </a>
         </div>
+        <div class="filter-option" data-filter="game">
+          <a href="#">
+            <img
+              src="./images/landing-jmm.png"
+              alt="____________________________"
+              width="250px"
+            />
+            <span class="underline">
+              <span class="underline-mask long-animation">
+                Museum Director
+                <span class="project-subtitle">(Board Game)</span></span
+              >
+            </span>
+          </a>
+        </div>
         <div class="filter-option" data-filter="code game">
           <a href="#">
             <img
-              src="./images/landing-debug.jpg"
+              src="./images/landing-debug.png"
               alt="Text states 'debug.Log_' in bold above the text 'Press A to execute method'"
               width="250px"
             />
@@ -151,7 +196,7 @@
         <div class="filter-option" data-filter="game art">
           <a href="#">
             <img
-              src="./images/landing-david.jpg"
+              src="./images/landing-david.png"
               alt="Postcard with a heart and 'David' written on the front, layered on top of graph paper with illegible writing"
               width="250px"
             />
@@ -163,10 +208,25 @@
             >
           </a>
         </div>
+        <div class="filter-option" data-filter="game">
+          <a href="#">
+            <img
+              src="./images/landing-storylines.png"
+              alt="Design of bird on a mountaintop, with the word 'Storylines' on the right-hand side"
+              width="250px"
+            />
+            <span class="underline">
+              <span class="underline-mask long-animation">
+                Storylines
+                <span class="project-subtitle">(Mobile Game)</span></span
+              ></span
+            >
+          </a>
+        </div>
         <div class="filter-option" data-filter="art">
           <a href="#">
             <img
-              src="./images/landing-home.jpg"
+              src="./images/landing-home-alt.png"
               alt="Graphic outline of an open laptop with the world 'HOME' on the screen. Below the laptop is the text, 'Press any key to continue _'"
               width="250px"
             />
@@ -181,7 +241,7 @@
         <div class="filter-option" data-filter="code game">
           <a href="#">
             <img
-              src="./images/landing-interplay.jpg"
+              src="./images/landing-interplay.png"
               alt="White circle with abstract shape cut out of the middle"
               width="250px"
             />
@@ -196,7 +256,7 @@
         <div class="filter-option" data-filter="code game">
           <a href="#">
             <img
-              src="./images/landing-return.jpg"
+              src="./images/landing-return.png"
               alt="The word Return in all capital letters"
               width="250px"
             />
@@ -208,17 +268,18 @@
             >
           </a>
         </div>
-        <div class="filter-option" data-filter="game">
+
+        <div class="filter-option" data-filter="art">
           <a href="#">
             <img
-              src="./images/landing-storylines.jpg"
-              alt="Design of bird on a mountaintop, with the word 'Storylines' on the right-hand side"
+              src="./images/landing-codergirl.png"
+              alt="Illustration of a person typing on an open laptop"
               width="250px"
             />
             <span class="underline">
               <span class="underline-mask long-animation">
-                Storylines
-                <span class="project-subtitle">(Mobile Game)</span></span
+                CoderGirl
+                <span class="project-subtitle">(Print Design)</span></span
               ></span
             >
           </a>
@@ -244,11 +305,11 @@
         </div>
         <div>
           <a
-            href="https://ashturn.itch.io/"
+            href="https://codepen.io/gojanedoe"
             class="yellow"
             rel="noreferrer"
             target="_blank"
-            ><span class="underline underline-perm">itch.io</span
+            ><span class="underline underline-perm">CodePen</span
             ><span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
