--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
           department.
         </p>
       </div>
-      <p class="small-block-space">
-        To check out my work, click below:
-      </p>
+      <p class="small-block-space">To check out my work, click below:</p>
       <nav class="filters-list large-block-space">
         <a
           href="#/"
@@ -64,10 +62,10 @@
 
       <div class="projects-container large-block-space">
         <div class="filter-option" data-filter="code">
-          <a href="#">
+          <a href="./project-template.html">
             <img
               src="./images/landing-drawthis.png"
-              alt="________"
+              alt="Lighthouse with arrow and pause buttons below"
               width="250px"
             />
             <span class="underline">
@@ -91,15 +89,6 @@
                 <span class="project-subtitle">(Board Game)</span></span
               >
             </span>
-            <!-- <img
-              src="./images/landing-scrapyard.jpg"
-              alt="Text stating 'Scrap Yard: Innovators of Recycling' above graphics for a fake five-dollar bill and single game die"
-              width="250px"
-            />
-            <h2 class="project-title">
-              Scrap Yard
-              <span class="project-subtitle">(Board Game)</span>
-            </h2> -->
           </a>
         </div>
         <div class="filter-option" data-filter="code art">
@@ -121,7 +110,7 @@
           <a href="#">
             <img
               src="./images/landing-ambrosia-alt.png"
-              alt="________"
+              alt="Cup with pudding and cherry next to a heart"
               width="250px"
             />
             <span class="underline">
@@ -167,7 +156,7 @@
           <a href="#">
             <img
               src="./images/landing-jmm.png"
-              alt="____________________________"
+              alt="Game board styled as a blueprint of a museum. Board includes rooms titled 'Development', 'Board Room', 'HR', 'Lobby', 'Marketing', 'Collections', 'Exhibit Hall'"
               width="250px"
             />
             <span class="underline">
