Add other choice for video upload

--- a/project-template-video.html
+++ b/project-template-video.html
@@ -27,6 +27,12 @@
           title="wandering.click"
         ></iframe>
       </div>
+      <!--ALTERNATIVE: LOCAL VIDEO FILE-->
+      <video class="main-image" controls>
+        <!-- Options: autoplay muted preload-->
+        <source src="./videos/wandering.mov" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
       <script src="https://player.vimeo.com/api/player.js"></script>
       <div class="project-link">
         Live project:
