Add video to wander

--- a/wander.html
+++ b/wander.html
@@ -17,12 +17,10 @@
       >
       <h1>Title</h1>
       <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
-      <button class="main-image zoomable">
-        <img
-          src="images/wander.png"
-          alt="Brightly colored game board with cards and game money fanned around it"
-        />
-      </button>
+      <video class="main-image" poster="./images/wander.png" controls>
+        <source src="./videos/wandering.mp4" type="video/mp4" />
+        Your browser does not support the HTML video tag.
+      </video>
       <div class="project-link">
         Live project:
         <a
@@ -170,9 +168,6 @@
         button.
       </p>
       <button class="close" aria-label="Close">&times;</button>
-      <div class="slide">
-        <img src="images/wander.png" />
-      </div>
       <div class="slide">
         <img src="images/wander1.png" />
       </div>
