--- a/wander.html
+++ b/wander.html
@@ -47,6 +47,58 @@
         it’s inspired by early net art, it uses bare-bones HTML, CSS, and
         JavaScript.
       </p>
+      <h2>Features</h2>
+      <ul>
+        <li>
+          Places
+          <a
+            href="http://wandering.click/snap.html"
+            target="_blank"
+            class="blue inline-link"
+            >text</a
+          >
+          and
+          <a
+            href="http://wandering.click/clouds.html"
+            target="_blank"
+            class="blue inline-link"
+            >ASCII art<span class="screenreader-text">
+              (Links open in new tabs)</span
+            ></a
+          >
+          randomly using browser width and height
+        </li>
+        <li>
+          Uses JavaScript functions to animate text on
+          <a
+            href="http://wandering.click/flowers.html"
+            target="_blank"
+            class="blue inline-link"
+            >certain</a
+          >
+          <a
+            href="http://wandering.click/click.html"
+            target="_blank"
+            class="blue inline-link"
+            >pages<span class="screenreader-text">
+              (Links open in new tabs)</span
+            ></a
+          >
+        </li>
+        <li>
+          Saves
+          <a
+            href="http://wandering.click/tree.html"
+            target="_blank"
+            class="blue inline-link"
+            >tree carvings<span class="screenreader-text">
+              (Link opens in new tab)</span
+            ></a
+          >
+          between browser sessions with local storage
+        </li>
+      </ul>
+
       <h2>Web Pages</h2>
       <div class="gallery-container large-block-space">
         <button class="zoomable">
