Add title and alts, and adjust features

--- a/wander.html
+++ b/wander.html
@@ -15,7 +15,7 @@
       <a href="index.html" class="back underline underline-perm pink"
         >Back to home</a
       >
-      <h1>Title</h1>
+      <h1>Wander</h1>
       <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
       <video class="main-image" poster="./images/wander.png" controls>
         <source src="./videos/wandering.mp4" type="video/mp4" />
@@ -50,26 +50,7 @@
       <h2>Features</h2>
       <ul>
         <li>
-          Places
-          <a
-            href="http://wandering.click/snap.html"
-            target="_blank"
-            class="blue inline-link"
-            >text</a
-          >
-          and
-          <a
-            href="http://wandering.click/clouds.html"
-            target="_blank"
-            class="blue inline-link"
-            >ASCII art<span class="screenreader-text">
-              (Links open in new tabs)</span
-            ></a
-          >
-          randomly using browser width and height
-        </li>
-        <li>
-          Uses JavaScript functions to animate text on
+          Uses JavaScript to animate text on
           <a
             href="http://wandering.click/flowers.html"
             target="_blank"
@@ -84,6 +65,9 @@
               (Links open in new tabs)</span
             ></a
           >
+        </li>
+        <li>
+          Places text and ASCII art randomly using browser width and height
         </li>
         <li>
           Saves
@@ -221,49 +205,94 @@
       </p>
       <button class="close" aria-label="Close">&times;</button>
       <div class="slide">
-        <img src="images/wander1.png" />
+        <img
+          src="images/wander1.png"
+          alt="Screenshot of four ASCII flowers growing with thin stems and leaves"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander2.png" />
+        <img
+          src="images/wander2.png"
+          alt="Screenshot of ASCII landscape, with three hills underneath a sun"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander3.png" />
+        <img
+          src="images/wander3.png"
+          alt="Screenshot of ASCII lines of grass with text interspersed reading: 'Hardiness maybe came from creeping through branch bundles that we pretended were hideouts' "
+        />
       </div>
       <div class="slide">
-        <img src="images/wander4.png" />
+        <img
+          src="images/wander4.png"
+          alt="Screenshot of ASCII tree with text 'carved' into it, including heart text emoji, face with star eyes text emoji, and the text 'wonderful trees hey there~'. Next to the tree is the text 'knife in hand, into the tree hello you carve', with 'hello' typed into a text input box."
+        />
       </div>
       <div class="slide">
-        <img src="images/wander5.png" />
+        <img
+          src="images/wander5.png"
+          alt="Screenshot of ASCII clouds floating across the browser with the text 'sinking as we sit' above them"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander6.png" />
+        <img
+          src="images/wander6.png"
+          alt="Screenshot of a square of ASCII grass"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander7.png" />
+        <img
+          src="images/wander7.png"
+          alt="Screenshot of white stars on black background with the text 'dry air and crinkling leaves"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander8.png" />
+        <img
+          src="images/wander8.png"
+          alt="Screenshot of three ASCII trees growing out of the ground. Their shadows are blue underlined hyperlinks"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander9.png" />
+        <img
+          src="images/wander9.png"
+          alt="Screenshot of white ASCII flowers growing out of lines of grass on a black background"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander10.png" />
+        <img
+          src="images/wander10.png"
+          alt="Screenshot of lines of text: 'this ruffled text runs in' and 'their metallic connection comforts in'"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander11.png" />
+        <img
+          src="images/wander11.png"
+          alt="Screenshot of lines of text: 'our creased access deceives us' and 'the smooth link slithers last'"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander12.png" />
+        <img
+          src="images/wander12.png"
+          alt="Text document that contains ASCII sketches of white stars on a black background, and white clouds on a gray background"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander13.png" />
+        <img
+          src="images/wander13.png"
+          alt="Text document that contains ASCII sketches of hills"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander14.png" />
+        <img
+          src="images/wander14.png"
+          alt="Text document that contains ASCII sketches. From top to bottom, it includes growing ASCII flowers, the words 'pigeons peck', 'snowflakes', and 'clouds', and ASCII clouds surrounding the text 'WITH .5 line height'"
+        />
       </div>
       <div class="slide">
-        <img src="images/wander15.png" />
+        <img
+          src="images/wander15.png"
+          alt="Text document that contains ASCII sketches of treetops"
+        />
       </div>
       <button class="left-arrow" aria-label="Previous image">
         <span>❮</span>
