Adjust animation length for Draw This

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 Draw This!
                 <span class="project-subtitle">(Front-end App)</span></span
               ></span
