Flesh out main content for scrap yard

--- a/scrap-yard.html
+++ b/scrap-yard.html
@@ -23,35 +23,148 @@
           alt="Brightly colored game board with cards and game money fanned around it"
         />
       </button>
-      <p class="small-block-space">Lorem Ipsum</p>
-      <p>Lorem ipsum.</p>
+      <p class="small-block-space">
+        <i>Scrap Yard: Innovators of Recycling</i> is an educational board game
+        made for the Jewish Museum of Maryland's 2019-2020 exhibit of the same
+        name. Within the education department, I designed the game's assets,
+        including a board, 18 cards, money, and a set of rules.
+      </p>
+
       <h2>Gallery</h2>
       <div class="gallery-container large-block-space">
         <button class="zoomable">
           <img
             src="images/scrapyard-1.png"
-            alt="View full size version of a screenshot of ASCII flowers growing"
+            alt="View full size version of a child moving a Scrap Yard game piece across a board"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-2.png"
-            alt="View full size version of a screenshot of ASCII landscape, with hills underneath a sun"
+            alt="View full size version of children playing Scrap Yard and holding game money"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-3.png"
-            alt="View full size version of a screenshot of poetic text on webpage"
+            alt="View full size version of a child handing game money to another above a Scrap Yard board"
+          />
+        </button>
+        <button class="zoomable gi-full">
+          <img
+            src="images/scrapyard-4.jpg"
+            alt="View full size version of Scrap Yard cards"
+          />
+        </button>
+      </div>
+
+      <h2>Challenge</h2>
+      <ul>
+        <li>
+          Design an engaging educational game for school groups that can be
+          played in 20 minutes
+        </li>
+        <li>
+          Create a game that integrates with the lesson plan for the exhibit,
+          <i>Scrap Yard: Innovators of Recycling</i>
+        </li>
+
+        <li>
+          Focus on teaching mathematics, business skills, and history in the
+          game's mechanics
+        </li>
+        <li>
+          Make the game easy to set up and explain to both small and large
+          groups of students
+        </li>
+      </ul>
+
+      <h2>Process & Iterations</h2>
+      <div class="gallery-container grid-4 large-block-space">
+        <button class="zoomable">
+          <img
+            src="images/scrapyard-5.png"
+            alt="View full size version of empty squares on a graphic of a game board"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/scrapyard-4.jpg"
-            alt="View full size version of a screenshot of ASCII tree and text input on webpage"
+            src="images/scrapyard-6.png"
+            alt="View full size version of semi-empty squares on a graphic of a white game board"
+          />
+        </button>
+        <button class="zoomable">
+          <img
+            src="images/scrapyard-7.png"
+            alt="View full size version of semi-empty squares on a graphic of a teal game board"
+          />
+        </button>
+        <button class="zoomable">
+          <img
+            src="images/scrapyard-8.png"
+            alt="View full size version of a black version of the Scrap Yard game board"
           />
         </button>
       </div>
+
+      <h2>Solution</h2>
+      <ul class="medium-block-space">
+        <li>
+          Bold lines and colors were chosen to appeal to a younger age group,
+          which simplified the graphic style and made the game text easier to
+          read
+        </li>
+        <li>
+          Facts were added on the back of each card to keep students engaged
+          when it wasn't their turn
+        </li>
+        <li>
+          The game's goal was simplified to be about the recycling business
+          experience, allowing students to focus on math and strategy skills
+          while buying, selling, and adding up profits
+        </li>
+      </ul>
+
+      <h2>Gameplay & Rules</h2>
+      <p class="small-block-space">
+        In the finished game, students are a part of a historical scrap
+        yard-owning family. The students first learn in the exhibit about their
+        respective families, and then split up into groups against other
+        families to play.
+      </p>
+      <p class="small-block-space">
+        Gameplay includes rounds to buy and sell different scrap items. Students
+        utilize math skills to calculate how much their scrap is worth
+        throughout and at the end of the game to find out who made the most
+        profit. They also learn about the supply and demand model during the
+        selling phase, since the price they get when selling in the
+        "marketplace" is affected by what other players are selling each round.
+      </p>
+
+      <!-- Add gallery of rules here -->
+
+      <p class="small-block-space">For more about the game, check out:</p>
+      <ul class="large-block-space">
+        <li>
+          <a
+            href="https://www.jewishtimes.com/from-scrapyard-to-schoolyard-jmm-creates-history-themed-board-game/"
+            target="_blank"
+            class="blue inline-link"
+            >From Scrapyard to Schoolyard: JMM Creates History-Themed Board
+            Game</a
+          >
+          from the <i>Baltimore Jewish Times</i>
+        </li>
+        <li>
+          <a
+            href="https://www.wypr.org/show/on-the-record/2019-10-24/scrap-yard-innovators-of-recycling"
+            target="_blank"
+            class="blue inline-link"
+            >"Scrap Yard: Innovators Of Recycling"</a
+          >
+          from <i>On The Record</i> on WYPR (19:50 mark)
+        </li>
+      </ul>
 
       <a
         href="#"
@@ -92,12 +205,37 @@
       <div class="slide">
         <img src="images/scrapyard-4.jpg" />
       </div>
-      <button class="left-arrow" aria-label="Previous image">
+      <div class="slide">
+        <img
+          src="images/scrapyard-5.png"
+          alt="Game board with one line of empty squares on the outer edge"
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="images/scrapyard-6.png"
+          alt="View full size version of semi-empty squares on a graphic of a white game board"
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="images/scrapyard-7.png"
+          alt="View full size version of semi-empty squares on a graphic of a teal game board"
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="images/scrapyard-8.png"
+          alt="View full size version of a black version of the Scrap Yard game board"
+        />
+      </div>
+
+      <div class="left-arrow" aria-label="Previous image">
         <span>❮</span>
-      </button>
-      <button class="right-arrow" aria-label="Next image">
+      </div>
+      <div class="right-arrow" aria-label="Next image">
         <span>❯</span>
-      </button>
+      </div>
     </div>
   </body>
 
