Adjust subtitle spacing

--- a/project-template-two-links.html
+++ b/project-template-two-links.html
@@ -34,7 +34,9 @@
           ><span class="screenreader-text"> (Link opens in a new tab)</span></a
         >
       </div>
-      <div class="project-subtitle-no-space">(Best viewed on Firefox)</div>
+      <div class="project-subtitle-no-space small-block-space">
+        (Best viewed on Firefox)
+      </div>
       <div class="project-link medium-block-space">
         Code:
         <a
